--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
   <!-- for-mobile-apps -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="keywords" content="Electronic Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-    SmartPhone Compatible web template, free web designs for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+  <meta name="keywords" content="E-commerce , Bootstrap Web Templates,  Android Compatible web template, 
+    SmartPhone Compatible web template, free web designs for mobiles  Motorola web design" />
   <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
     function hideURLbar(){ window.scrollTo(0,1); } </script>
-  <!-- //for-mobile-apps -->
+
   <!-- Custom Theme files -->
   <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
